final fix ios layout issue
deprecate to use svg phone padding on iphone

--- a/src/components/Phone/Dcard/Dcard.css
+++ b/src/components/Phone/Dcard/Dcard.css
@@ -74,6 +74,7 @@
 }
 
 .dc-content {
+  width: 320px !important;
   margin-top: 5px;
   padding: 10px;
   background-color: #ffffff;
